--- a/src/ContentBlockService.Frontend/ContentBlockService.Frontend.csproj
+++ b/src/ContentBlockService.Frontend/ContentBlockService.Frontend.csproj
@@ -457,5 +457,11 @@
   <ItemGroup>
     <Folder Include="Properties\" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ContentBlockService\ContentBlockService.csproj">
+      <Project>{a8711bc3-f343-4e44-b045-349942559795}</Project>
+      <Name>ContentBlockService</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)\TypeScript\Microsoft.TypeScript.targets" Condition="Exists('$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)\TypeScript\Microsoft.TypeScript.targets')" />
 </Project>
