--- a/src/ContentBlockService/ContentBlockService.csproj
+++ b/src/ContentBlockService/ContentBlockService.csproj
@@ -223,6 +223,7 @@
     <Compile Include="Data\Helpers\SoftDeleteAttribute.cs" />
     <Compile Include="Data\Helpers\SoftDeleteInterceptor.cs" />
     <Compile Include="Data\Helpers\SoftDeleteQueryVisitor.cs" />
+    <Compile Include="Data\Model\ContentBlockType.cs" />
     <Compile Include="Data\Model\ILoggable.cs" />
     <Compile Include="Data\Migrations\Configuration.cs" />
     <Compile Include="Features\Core\Cache.cs" />
@@ -260,6 +261,9 @@
     <Compile Include="Features\DigitalAssets\UploadHandlers\StreamHelper.cs" />
     <Compile Include="Features\Notifications\NotificationsConfiguration.cs" />
     <Compile Include="Features\Notifications\NotificationService.cs" />
+    <Compile Include="Features\RESTServices\Clients\EventRESTServiceClient.cs" />
+    <Compile Include="Features\RESTServices\IRESTServiceClient.cs" />
+    <Compile Include="Features\RESTServices\RESTServiceClientProvider.cs" />
     <Compile Include="Features\Users\AddOrUpdateUserCommand.cs" />
     <Compile Include="Features\Users\Constants.cs" />
     <Compile Include="Features\Users\GetUserByIdQuery.cs" />
@@ -318,9 +322,23 @@
     <Compile Include="Features\QuintupleContentBlocks\RemoveQuintupleContentBlockCommand.cs" />
     <Compile Include="Features\QuintupleContentBlocks\QuintupleContentBlockApiModel.cs" />
     <Compile Include="Features\QuintupleContentBlocks\QuintupleContentBlockController.cs" />
+    <Compile Include="Data\Model\Resource.cs" />
+    <Compile Include="Features\Resources\AddOrUpdateResourceCommand.cs" />
+    <Compile Include="Features\Resources\GetResourcesQuery.cs" />
+    <Compile Include="Features\Resources\GetResourceByIdQuery.cs" />
+    <Compile Include="Features\Resources\RemoveResourceCommand.cs" />
+    <Compile Include="Features\Resources\ResourceApiModel.cs" />
+    <Compile Include="Features\Resources\ResourceController.cs" />
+    <Compile Include="Data\Model\BaseUri.cs" />
+    <Compile Include="Data\Model\RESTService.cs" />
+    <Compile Include="Features\RESTServices\AddOrUpdateRESTServiceCommand.cs" />
+    <Compile Include="Features\RESTServices\GetRESTServicesQuery.cs" />
+    <Compile Include="Features\RESTServices\GetRESTServiceByIdQuery.cs" />
+    <Compile Include="Features\RESTServices\RemoveRESTServiceCommand.cs" />
+    <Compile Include="Features\RESTServices\RESTServiceApiModel.cs" />
+    <Compile Include="Features\RESTServices\RESTServiceController.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Features\QuintupleContentBlocks\" />
     <Folder Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
