--- a/src/ContentBlockService.Frontend.Admin/ContentBlockService.Frontend.Admin.csproj
+++ b/src/ContentBlockService.Frontend.Admin/ContentBlockService.Frontend.Admin.csproj
@@ -6,8 +6,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>
-    </ProductVersion>
+    <ProductVersion></ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{F6286226-21E2-4BEB-B76D-F9E2D650E02A}</ProjectGuid>
     <ProjectTypeGuids>{349c5851-65df-11da-9384-00065b846f21};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
@@ -22,8 +21,7 @@
     <IISExpressWindowsAuthentication />
     <IISExpressUseClassicPipelineMode />
     <UseGlobalApplicationHostFile />
-    <NuGetPackageImportStamp>
-    </NuGetPackageImportStamp>
+    <NuGetPackageImportStamp></NuGetPackageImportStamp>
     <TypeScriptToolsVersion>2.2</TypeScriptToolsVersion>
     <TypeScriptEmitDecoratorMetadata>true</TypeScriptEmitDecoratorMetadata>
     <TypeScriptModuleKind>commonjs</TypeScriptModuleKind>
@@ -244,6 +242,30 @@
     </Content>
     <Content Include="src\app\app.component.scss">
       <DependentUpon>app.component.ts</DependentUpon>
+    </Content>
+    <Content Include="src\app\call-to-action-content-blocks\call-to-action-content-block-edit-embed.component.html">
+      <DependentUpon>call-to-action-content-block-edit-embed.component.ts</DependentUpon>
+    </Content>
+    <Content Include="src\app\call-to-action-content-blocks\call-to-action-content-block-edit-embed.component.scss">
+      <DependentUpon>call-to-action-content-block-edit-embed.component.ts</DependentUpon>
+    </Content>
+    <Content Include="src\app\call-to-action-content-blocks\call-to-action-content-block-item-embed.component.html">
+      <DependentUpon>call-to-action-content-block-item-embed.component.ts</DependentUpon>
+    </Content>
+    <Content Include="src\app\call-to-action-content-blocks\call-to-action-content-block-item-embed.component.scss">
+      <DependentUpon>call-to-action-content-block-item-embed.component.ts</DependentUpon>
+    </Content>
+    <Content Include="src\app\call-to-action-content-blocks\call-to-action-content-block-master-detail.component.html">
+      <DependentUpon>call-to-action-content-block-master-detail.component.ts</DependentUpon>
+    </Content>
+    <Content Include="src\app\call-to-action-content-blocks\call-to-action-content-block-master-detail.component.scss">
+      <DependentUpon>call-to-action-content-block-master-detail.component.ts</DependentUpon>
+    </Content>
+    <Content Include="src\app\call-to-action-content-blocks\call-to-action-content-block-paginated-list-embed.component.html">
+      <DependentUpon>call-to-action-content-block-paginated-list-embed.component.ts</DependentUpon>
+    </Content>
+    <Content Include="src\app\call-to-action-content-blocks\call-to-action-content-block-paginated-list-embed.component.scss">
+      <DependentUpon>call-to-action-content-block-paginated-list-embed.component.ts</DependentUpon>
     </Content>
     <Content Include="src\app\content-blocks\content-block-edit-embed.component.html">
       <DependentUpon>content-block-edit-embed.component.ts</DependentUpon>
@@ -513,8 +535,7 @@
           <IISUrl>http://localhost:64411/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
-          <CustomServerUrl>
-          </CustomServerUrl>
+          <CustomServerUrl></CustomServerUrl>
           <SaveServerSettingsInUserFile>False</SaveServerSettingsInUserFile>
         </WebProjectProperties>
       </FlavorProperties>
@@ -680,6 +701,14 @@
     <TypeScriptCompile Include="src\app\resources\resource.service.ts" />
     <TypeScriptCompile Include="src\app\resources\index.ts" />
     <TypeScriptCompile Include="src\app\resources\resource.model.ts" />
+    <TypeScriptCompile Include="src\app\call-to-action-content-blocks\call-to-action-content-block-edit-embed.component.ts" />
+    <TypeScriptCompile Include="src\app\call-to-action-content-blocks\call-to-action-content-block-paginated-list-embed.component.ts" />
+    <TypeScriptCompile Include="src\app\call-to-action-content-blocks\call-to-action-content-block-item-embed.component.ts" />
+    <TypeScriptCompile Include="src\app\call-to-action-content-blocks\call-to-action-content-block-master-detail.component.ts" />
+    <TypeScriptCompile Include="src\app\call-to-action-content-blocks\call-to-action-content-block.actions.ts" />
+    <TypeScriptCompile Include="src\app\call-to-action-content-blocks\call-to-action-content-block.service.ts" />
+    <TypeScriptCompile Include="src\app\call-to-action-content-blocks\index.ts" />
+    <TypeScriptCompile Include="src\app\call-to-action-content-blocks\call-to-action-content-block.model.ts" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
