--- a/src/ContentBlockService.Frontend.Admin/package.json
+++ b/src/ContentBlockService.Frontend.Admin/package.json
@@ -10,22 +10,22 @@
   "license": "MIT",
   "dependencies": {
     "@webcomponents/custom-elements": "1.0.0",
-    "core-js": "2.4.1",
-    "injection-js": "1.0.0",
-    "moment-timezone": "0.5.11",
-    "reflect-metadata": "0.1.9",
-    "rxjs": "5.0.2",
-    "sass-loader": "4.0.2",
-    "zone.js": "0.7.4",
     "awesome-typescript-loader": "3.2.1",
     "babili-webpack-plugin": "0.0.8",
+    "core-js": "2.4.1",
     "html-loader": "0.4.4",
+    "injection-js": "1.0.0",
+    "moment-timezone": "0.5.11",
     "node-sass": "3.10.1",
     "offline-plugin": "4.6.1",
     "raw-loader": "0.5.1",
+    "reflect-metadata": "0.1.9",
+    "rxjs": "5.0.2",
+    "sass-loader": "4.0.2",
     "ts-loader": "0.8.2",
-    "typescript": "2.4.0",
+    "typescript": "^2.4.0",
     "uglify-loader": "1.3.0",
-    "webpack": "3.0.0"
+    "webpack": "^3.0.0",
+    "zone.js": "0.7.4"
   }
 }
